Fix Safari layout issues. Add centered variant for Section component

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -58,6 +58,7 @@ h6 {
 
 #root,
 #__next {
-  min-height: 100%;
+  min-height: stretch;
+  min-height: 100vh;
   isolation: isolate;
 }
